# cmc_study

./: .gitmodules
2_caos_practicum_fall/kr1/: 1.c  2.c  4.c  5.c
2_caos_practicum_fall/kr2/: 3.c  5.c
2_caos_practicum_fall/sem01/: 1.c  2.c  2.txt  3.c  4.c  4_test.c  5.c  6.c  Makefile
2_caos_practicum_fall/sem02/: 1.c  2.txt  4.txt  answers.txt  key
2_caos_practicum_fall/sem03/: 1.c  1_help.c  2.c  3.c  4.c  4_help.c  5.c  5_help.c
2_caos_practicum_fall/sem04/: 04-5.c  1.c  2.c  2_help.c  3.c  3_help.c  4.c  5.c  5_help.c  out
2_caos_practicum_fall/sem05/: 1.c  2.c  3.c  3_help.c  4.c  5.c  5_help.c
2_caos_practicum_fall/sem06/: 1.c  2.c  2_help.c  3.c  4.c  5.c  5_help.c  5_test.c
2_caos_practicum_fall/sem07/: 1.c  2.c  3.c  4.c  4_check.c  4_help.c  5.c
2_caos_practicum_fall/sem09/class/: 1  1.c  2  2.c  3.c  4.c
2_caos_practicum_fall/sem09/t1/: 1  gdb-1-task.tar
2_caos_practicum_fall/sem09/t2/: cJSON.c  gdb-2-task.tar  tags  task2
2_caos_practicum_fall/sem10/: 1.c  2.c  2_help.c  3.c  4.c
2_caos_practicum_fall/sem11/: 1.c  2.c  3.c  4.c  5.c
2_caos_practicum_fall/sem12/: 1.c  2.c  3.c  4.c  5.c
2_caos_practicum_fall/sem13/: 1.c  2.c  3.c  4.c  5.c
2_caos_practicum_fall/sem14/: 1.c  2.c  3.c  4.c  5.c  script
2_caos_practicum_fall/sem15/: 1-1.c  1.c  2.c  3.c  4.c  5.c
2_caos_practicum_fall/sem16/: 1.c  2.c  3.c  4.c
2_caos_practicum_fall/sources/: server.txt
2_cpp_practicum_spring/contest-01/: 1-1.cpp  1.cpp  2-1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  Makefile  compile  main
2_cpp_practicum_spring/contest-02/: 1.cpp  2-1.cpp  2.cpp  3-1.cpp  4.cpp  5-1.cpp  5.cpp  6-1.cpp  6.cpp  7-1.cpp  7.cpp  Makefile
2_cpp_practicum_spring/contest-03/: 1-1.cpp  1.cpp  2-1.cpp  2.cpp  3.cpp  compile  main.cpp
2_cpp_practicum_spring/contest-04/: 1  1-1  1-1.cpp  1.cpp  2-1  2-1.cpp  2.cpp  3-1  3-1.cpp  3.cpp  4.cpp  Makefile
2_cpp_practicum_spring/contest-05/: 1.cpp  2.cpp  4.cpp  5.cpp
2_cpp_practicum_spring/contest-06/: 1.cpp  2.cpp  3.cpp  4.cpp
2_cpp_practicum_spring/contest-07/: 1.cpp  2.cpp  3.cpp  5.cpp
3_ctm_mct_spring/: CMakeLists.txt
3_ctm_mct_spring/task_1_solve_eq/: CMakeLists.txt  graph.ipynb  report.tex  solve_eq.cpp  solve_eq.h  test.cpp
3_ctm_mct_spring/task_3_gmsh/: res.csv  script.csv
3_ctm_nmla_fall_spring/conjugate_gradient/: run.cpp
3_nmla_fall/: CMakeLists.txt  README.md  conanfile.txt
3_nmla_fall/benchmark/: CMakeLists.txt  givens_rotations.cpp
3_nmla_fall/report_1/: report.aux  report.fdb_latexmk  report.fls  report.tex
3_nmla_fall/report_2/: report.fdb_latexmk  report.fls  report.tex
3_nmla_fall/src/: CMakeLists.txt  chebyshev_iter.cpp  chebyshev_iter.h  common.h  givens_rotations.cpp  givens_rotations.h  matrix.cpp  matrix.h  triangular_matrix.cpp  triangular_matrix.h  vector.cpp  vector.h
3_nmla_fall/tests/: CMakeLists.txt  SLAU_var_5.csv  test.cpp
4_24_25_ctm_mct_fall/: CMakeLists.txt  README.md
4_24_25_ctm_mct_fall/fem/: diffusion_fem.cpp
4_24_25_ctm_mct_fall/fem/report/: main.tex
4_24_25_ctm_mct_fall/fvm/: CMakeLists.txt
4_24_25_ctm_mct_fall/fvm/report/: main.tex
4_24_25_ctm_mmna_fall/: task_1.ipynb  task_2.ipynb  task_3.ipynb  task_4.ipynb  task_5.ipynb  task_6.ipynb  task_7.ipynb  task_8.ipynb  task_9.ipynb
4_ctm_mct_fall/: 1_fdm_poisson.ipynb
4_ctm_mct_fall/fem/: CMakeLists.txt
4_ctm_mct_fall/fvm/: diffusion_fvm.cpp
4_ctm_mmna_fall/: task_1.ipynb
(+3 files in other folders)
